--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,11 @@
 }
 
 
+.bestProduct{
+  background-color: #DB7090;
+  animation:clignote 2s linear infinite;
+
+}
+@keyframes clignote {
+  50% {opacity: 0.5;}
+}
